adicionando informações sobre mim

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Sou Karem e sou <span class="typing-2"></span></div>
-                    <div class="texto-descritivo"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro doloribus minus eum sed ex. Pariatur voluptate fugit officia nobis nemo nihil reiciendis, similique quas ut tempore adipisci debitis corrupti rerum molestiae placeat excepturi blanditiis assumenda quis suscipit! Vel facilis maiores doloremque perferendis inventore tempore molestiae, sit ipsa blanditiis animi nostrum qui, atque architecto voluptatum cum cupiditate aliquid eius voluptatem id!</p></div>
+                    <div class="texto-descritivo"><p> Sou estuante do curso de sistemas para internet da universidade católica de Pernambuco. Ingressei nesta graduação, por meio de um programa da prefeitura do Recife chamado Embarque Digital, onde durante todo o processo de formação, nós temos contato direto com empresas que fazem parte do parque tecnológico. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro doloribus minus eum sed ex. Pariatur voluptate fugit officia nobis nemo nihil reiciendis, similique quas ut tempore adipisci debitis corrupti rerum molestiae placeat excepturi blanditiis assumenda quis suscipit! Vel facilis maiores doloremque perferendis inventore tempore molestiae, sit ipsa blanditiis animi nostrum qui, atque architecto voluptatum cum cupiditate aliquid eius voluptatem id!</p></div>
                     <a href="#">Download CV</a>
                 </div>
             </div>
