--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="imagex/png" href="image/favicon.ico">
+    <link rel="shortcut icon" type="imagex/png" href="img/favicon.ico">
 </head>
 <body>
     <div class="navbar">
@@ -35,7 +35,7 @@
                 <a href="https://www.linkedin.com/in/karemsantos/" target="_blank">Contratar-me</a>
             </div>
         </div>
-        <div class="avatar"><img src="image/avatar 7.png" height="470px" alt=""></div>
+        <div class="avatar"><img src="imag/avatar 7.png" height="470px" alt=""></div>
     </section>
 
     <!--sessão sobre-->
@@ -44,7 +44,7 @@
             <h2 class="title">Sobre mim</h2>
             <div class="about-content">
                 <div class="column left">
-                   <div class="foto-sobre"><img src="image/sobremim.jpg" alt="foto-perfil" ></div> 
+                   <div class="foto-sobre"><img src="imag/sobremim.jpg" alt="foto-perfil" ></div> 
                 </div>
                 <div class="column right">
                     <div class="text">Sou Karem e sou <span class="typing-2"></span></div>
@@ -112,7 +112,7 @@
            <div class="carousel owl-carousel ">
                <div class="card">
                    <div class="box">
-                       <img src="image/Curriculo -Web.png" alt="imagem de página inicial do currículo web">
+                       <img src="imag/Curriculo -Web.png" alt="imagem de página inicial do currículo web">
                        <div class="text">Currículo Web</div> 
                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nokjfjoidsfusodijfkdsfioeskdnfjksnvsefhfncvjshvkdbis.</p>
                        
@@ -121,7 +121,7 @@
                </div>
                <div class="card">
                 <div class="box">
-                    <img src="image/Jogo com java - img.png" alt="">
+                    <img src="imag/Jogo com java - img.png" alt="">
                     <div class="text">Jogo com Java</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                     <a href="https://github.com/KaremLeticia/JoguinhoJava.git" target="_blank"> Reposítório do Jogo com Java</a>
@@ -129,7 +129,7 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="image/Gerador de Senha - img.png" alt="">
+                    <img src="imag/Gerador de Senha - img.png" alt="">
                     <div class="text">Gerador de Senha</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                     <a href="https://github.com/KaremLeticia/GeradordeSenha.git" target="_blank">Reposítório Gerador de Senha</a>
@@ -137,7 +137,7 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="image/Corrida da leitura - img.png" alt="">
+                    <img src="imag/Corrida da leitura - img.png" alt="">
                     <div class="text">Corrida da Leitura</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                     <a href="https://corridadaleitura.netlify.app/" target="_blank"> Acesse o jogo corrida da Leitura </a>
@@ -145,7 +145,7 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="image/layout simples de jogo (winx).png" alt="">
+                    <img src="imag/layout simples de jogo (winx).png" alt="">
                     <div class="text">Layout simples de jogo (winx)</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                     <a href="https://github.com/KaremLeticia/winxproject.git" target="_blank"> Reposítório Layout simples </a>
