--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="https://www.linkedin.com/in/karemsantos/" target="_blank">Contratar-me</a>
             </div>
         </div>
-        <div class="avatar"><img src="imag/avatar 7.png" height="470px" alt=""></div>
+        <div class="avatar"><img src="img/avatar 7.png" height="470px" alt=""></div>
     </section>
 
     <!--sessão sobre-->
@@ -44,7 +44,7 @@
             <h2 class="title">Sobre mim</h2>
             <div class="about-content">
                 <div class="column left">
-                   <div class="foto-sobre"><img src="imag/sobremim.jpg" alt="foto-perfil" ></div> 
+                   <div class="foto-sobre"><img src="img/sobremim.jpg" alt="foto-perfil" ></div> 
                 </div>
                 <div class="column right">
                     <div class="text">Sou Karem e sou <span class="typing-2"></span></div>
@@ -112,7 +112,7 @@
            <div class="carousel owl-carousel ">
                <div class="card">
                    <div class="box">
-                       <img src="imag/Curriculo -Web.png" alt="imagem de página inicial do currículo web">
+                       <img src="img/Curriculo -Web.png" alt="imagem de página inicial do currículo web">
                        <div class="text">Currículo Web</div> 
                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nokjfjoidsfusodijfkdsfioeskdnfjksnvsefhfncvjshvkdbis.</p>
                        
@@ -121,7 +121,7 @@
                </div>
                <div class="card">
                 <div class="box">
-                    <img src="imag/Jogo com java - img.png" alt="">
+                    <img src="img/Jogo com java - img.png" alt="">
                     <div class="text">Jogo com Java</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                     <a href="https://github.com/KaremLeticia/JoguinhoJava.git" target="_blank"> Reposítório do Jogo com Java</a>
