atualização de imgs

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="imag/Gerador de Senha - img.png" alt="">
+                    <img src="img/Gerador de Senha - img.png" alt="">
                     <div class="text">Gerador de Senha</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                     <a href="https://github.com/KaremLeticia/GeradordeSenha.git" target="_blank">Reposítório Gerador de Senha</a>
@@ -145,7 +145,7 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="imag/layout simples de jogo (winx).png" alt="">
+                    <img src="img/layout simples de jogo (winx).png" alt="">
                     <div class="text">Layout simples de jogo (winx)</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                     <a href="https://github.com/KaremLeticia/winxproject.git" target="_blank"> Reposítório Layout simples </a>
