--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="imag/Corrida da leitura - img.png" alt="">
+                    <img src="img/Corrida da leitura - img.png" alt="">
                     <div class="text">Corrida da Leitura</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                     <a href="https://corridadaleitura.netlify.app/" target="_blank"> Acesse o jogo corrida da Leitura </a>
