--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2 class="title">Sobre mim</h2>
             <div class="about-content">
                 <div class="column left">
-                   <div class="foto-sobre"><img src="img/sobremim.jpg" alt="foto-perfil" ></div> 
+                   <div class="foto-sobre"><img src="img/img-perfil.jpg" alt="foto-perfil" ></div> 
                 </div>
                 <div class="column right">
                     <div class="text">Sou Karem e sou <span class="typing-2"></span></div>
