--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
                     </div>
                     <div class="line mysql"></div>
                 </div>
+                    <div class="bars">
+                    <div class="info">
+                        <span>Python</span>
+                        <span>51%</span>
+                    </div>
+                    <div class="line Python"></div>
+                </div>
                 </div>
             </div>
         </div>
